Fix: Loader Not Showing When Scrolled

--- a/components/loader/loader.scss
+++ b/components/loader/loader.scss
@@ -1,10 +1,9 @@
 #loaderContainer {
-  position: absolute;
+  position: fixed;
   z-index: 1000;
   width: 100%;
   height: 100%;
   background-color: white;
-  // display: none;
 
   .loader {
     position: absolute;
